--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </main>
     <footer>
         <p>
-            Site criado por <a href="#">Gustavo Guanabara</a> para o <a href="#">CursoemVideo</a>.
+            Site criado por <a href="#">Julinho</a> para o <a href="#">CursoemVideo</a>.
         </p>
     </footer>
 </body>
